Signed-off-by: buddhika_ari <buddhika_ari@arogya.c.api-project-316008881718.internal>

--- a/src/main/webapp/lab/investigation_format.xhtml
+++ b/src/main/webapp/lab/investigation_format.xhtml
@@ -587,7 +587,7 @@
 
 
                                         <h:panelGroup id="gpIi" rendered="#{myIi.retired ne true and  myIi.ixItemType ne 'Investigation'}">
-                                            <div style="#{myIi.outerCssStyle};background-color: wheat;" >
+                                            <div style="#{myIi.outerCssStyle};background-color: #{myIi.ixItemType eq 'Value' ? 'lightgreen':'lightyellow'}; border: 1px solid lightblue; " >
                                                 <h:outputLabel id="lblViewModeIi" 
                                                                rendered="#{investigationItemController.editMode eq 'View_Mode'}"  value="#{myIi.htmltext}" 
                                                                style="#{myIi.innerCssStyle}; color: black;" 
@@ -609,7 +609,7 @@
                                                 <p:inputText id="txtEditIi" 
                                                              rendered="#{investigationItemController.editMode eq 'Edit_mode'}"  
                                                              value="#{myIi.htmltext}" 
-                                                             style="#{myIi.innerCssStyle}; border: 1px solid brown;background-color: bisque;vertical-align: top!important; overflow: scroll!important;"  >
+                                                             style="#{myIi.innerCssStyle}; border: 1px solid brown;background-color: bisque;vertical-align: top!important; overflow: scroll!important; background-color: #{myIi.ixItemType eq 'Value' ? 'lightgreen':'lightyellow'};"  >
                                                     <f:ajax event="focus" execute="@this" listener="#{investigationItemController.makeThisCurrent(myIi)}" render=":#{p:component('dtbItem')} :#{p:component('pDetails')} "  ></f:ajax>
                                                     <f:ajax event="blur" execute="@this" listener="#{investigationItemController.saveIiOnAjax(myIi)}" render=":#{p:component('dtbItem')} :#{p:component('pDetails')}"></f:ajax>
                                                 </p:inputText>
