--- a/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
+++ b/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
@@ -372,8 +372,8 @@
             </div>
 
 
-            <div>
-                <p:barcode value="#{cc.attrs.bill.idStr}" type="code39" ></p:barcode>
+            <div style="width: 100%;text-align: center;font-size: 10px;">
+                <p:barcode value="#{cc.attrs.bill.idStr}" type="code39" width="200" height="100"></p:barcode>
             </div>
 
 
