--- a/src/main/webapp/opd_bill.xhtml
+++ b/src/main/webapp/opd_bill.xhtml
@@ -379,26 +379,26 @@
                                              
                                              <p:dialog id="panDoc" header="Add New Doctor" widgetVar="dlg" resizable="false" modal="true">  
                                                 <h:panelGrid columns="2" style="margin-bottom:10px">  
-                                                    <h:outputText id="lblNameD" value="Name" ></h:outputText>
+                                                    <p:outputLabel id="lblNameD" value="Name" ></p:outputLabel>
                                                     <h:inputText autocomplete="off" id="txtNameD"  value="#{doctorController.current.person.name}"  ></h:inputText>
-                                                    <h:outputText id="lblPhoneD" value="Phone" ></h:outputText>
+                                                    <p:outputLabel id="lblPhoneD" value="Phone" ></p:outputLabel>
                                                     <h:inputText autocomplete="off" id="txtPhoneD" value="#{doctorController.current.person.phone}"  ></h:inputText>
-                                                    <h:outputText id="lblFaxD" value="Fax" ></h:outputText>
+                                                    <p:outputLabel id="lblFaxD" value="Fax" ></p:outputLabel>
                                                     <h:inputText autocomplete="off" id="txtFaxD" value="#{doctorController.current.person.fax}"  ></h:inputText>
-                                                    <h:outputText id="lblMobileD" value="Mobile" ></h:outputText>
+                                                    <p:outputLabel id="lblMobileD" value="Mobile" ></p:outputLabel>
                                                     <h:inputText autocomplete="off" id="txtMobileD" value="#{doctorController.current.person.mobile}"  ></h:inputText>
-                                                    <h:outputText id="lblAddressD" value="Address" ></h:outputText>
+                                                    <p:outputLabel id="lblAddressD" value="Address" ></p:outputLabel>
                                                     <h:inputText autocomplete="off" id="txtAddressD" value="#{doctorController.current.person.address}"  ></h:inputText>
-                                                    <h:outputText value="Code"></h:outputText>   
+                                                    <p:outputLabel value="Code"></p:outputLabel>   
                                                     <h:inputText autocomplete="off" id="txtCodeD" value="#{doctorController.current.code}"  ></h:inputText>
-                                                    <h:outputText value="Speciality" ></h:outputText>
-                                                    <h:selectOneListbox id="cmbSpecialityD" size="1" value="#{doctorController.current.speciality}" >
+                                                    <p:outputLabel value="Speciality" ></p:outputLabel>
+                                                    <p:selectOneMenu id="cmbSpecialityD" value="#{doctorController.current.speciality}" >
                                                         <f:selectItem itemLabel="Please select a speciality"/>
-                                                        <f:selectItems value="#{specialityController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
-                                                    </h:selectOneListbox>
-                                                    <h:outputText id="lblRegD" value="Registration" ></h:outputText>
+                                                        <f:selectItems value="#{doctorSpecialityController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
+                                                    </p:selectOneMenu>
+                                                    <p:outputLabel id="lblRegD" value="Registration" ></p:outputLabel>
                                                     <h:inputText autocomplete="off" id="txtRegD" value="#{doctorController.current.registration}"  ></h:inputText>                 
-                                                    <h:outputText id="lblQuaD" value="Qualification" ></h:outputText>
+                                                    <p:outputLabel id="lblQuaD" value="Qualification" ></p:outputLabel>
                                                     <h:inputText autocomplete="off" id="txtQuaD" value="#{doctorController.current.qualification}"  ></h:inputText>   
 
                                                     <p:commandButton id="btnDocSave" value="Add New" process="btnDocSave panDoc" update="panDoc :#{p:component('cmbDoc')}" actionListener="#{doctorController.saveSelected()}" styleClass="buttons" oncomplete="dlg.hide();">
