Errors in Patient Report were corrected. Signed-off-by: buddhika_ari <buddhika_ari@arogya.c.api-project-316008881718.internal>

--- a/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
+++ b/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
@@ -373,9 +373,15 @@
 
 
             <div style="width: 100%;text-align: center;font-size: 10px;">
-                <p:barcode value="#{cc.attrs.bill.idStr}" type="code39" width="200" height="100"></p:barcode>
+                <p:barcode value="#{cc.attrs.bill.idStr}" type="code128" cache="false" format="png" hrp="none"
+                           />
             </div>
 
+<!--            
+            <div style="width: 100%;text-align: center;font-size: 10px;">
+                <p:barcode value="01234567895" type="upca" format="png" cache="false"/>
+            </div>-->
+            
 
         </div>
     </cc:implementation>
