--- a/src/main/webapp/lab/collecting_centre.xhtml
+++ b/src/main/webapp/lab/collecting_centre.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Collecting Centres" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Collecting Centres">
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
