--- a/src/main/webapp/lab/credit_company.xhtml
+++ b/src/main/webapp/lab/credit_company.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Credit Companies" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Credit Companies" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
