Changes in Billing Interfaces

--- a/src/main/webapp/lab/patient_report.xhtml
+++ b/src/main/webapp/lab/patient_report.xhtml
@@ -68,12 +68,12 @@
                                     <p:commandButton styleClass="nonPrintBlock"  id="btnCancel"  disabled ="#{!(webUserController.hasPrivilege('LabDeAutherizing') eq true and patientReportController.currentPatientReport.approved eq true)}"   value="Cancel Approval" action="#{patientReportController.reverseApprovalOfPatientReport()}" ajax="false" onclick="onSubmitButton();"  >
                                     </p:commandButton>
 
-                                    <p:commandButton styleClass="nonPrintBlock"  
-                                                     ajax="false" 
-                                                     value="Print" 
-                                                     rendered="#{patientReportController.currentPatientReport.approved or userPreferenceController.userPreference.canPrintWithoutPermission }"
-                                                     onclick="window.print();" 
-                                                     actionListener="#{patientReportController.printPatientReport()}"/>
+                                    <!--                                    <p:commandButton styleClass="nonPrintBlock"  
+                                                                                         ajax="false" 
+                                                                                         value="Print" 
+                                                                                         rendered="#{patientReportController.currentPatientReport.approved or userPreferenceController.userPreference.canPrintWithoutPermission}"
+                                                                                         onclick="window.print();" 
+                                                                                         actionListener="#{patientReportController.printPatientReport()}"/>-->
 
                                     <p:spacer width="30" ></p:spacer>
                                     <p:commandButton  styleClass="nonPrintBlock"  value="Patient Report Search" action="#{patientReportController.patientReportSearch}" ajax="false" >
@@ -336,7 +336,7 @@
 
 
                             </h:panelGroup>
-                            <p:commandButton value="Print" ajax="false" 
+                            <p:commandButton value="Print" ajax="false" actionListener="#{patientReportController.printPatientReport()}"
                                              rendered="#{patientReportController.currentPatientReport.approved or userPreferenceController.userPreference.canPrintWithoutPermission }" >
                                 <p:printer target="divPrint" ></p:printer>
                             </p:commandButton>
