Report FOrmat for Microbiology is going to be changed

--- a/src/main/webapp/lab/investigation_format.xhtml
+++ b/src/main/webapp/lab/investigation_format.xhtml
@@ -307,6 +307,7 @@
                                                         <f:selectItem itemLabel="Dynamic Label" itemValue="DynamicLabel"/>
                                                         <f:selectItem itemLabel="Investigation" itemValue="Investigation"/>
                                                         <f:selectItem itemLabel="Template" itemValue="Template"/>
+                                                        <f:selectItem itemLabel="Antibiotic" itemValue="AntibioticList"/>
                                                     </p:selectOneMenu>
                                                 </p:column>
                                                 <p:column >
