--- a/src/main/webapp/lab/setup.xhtml
+++ b/src/main/webapp/lab/setup.xhtml
@@ -28,6 +28,7 @@
                                 <p:commandButton  styleClass="linkButton" ajax="false" value="Ix Cats to Cats Categories" action="#{investigationController.catToIxCat}" onclick="onSubmitButton();" />
                                 <p:commandButton  styleClass="linkButton" ajax="false" value="Add Worksheet Items" action="#{investigationController.reportItemsToWorksheetItems}" onclick="onSubmitButton();" />
                                 <p:commandButton  styleClass="linkButton" ajax="false" value="Copy Ix" action="/lab/copy" onclick="onSubmitButton();" />
+                                <p:commandButton  styleClass="linkButton" ajax="false" value="To Delete Many Investigation Items" action="/lab/investigation_values_to_delete" onclick="onSubmitButton();" />
                             </h:panelGrid>
                         </p:panel>
 
