--- a/src/main/webapp/lab/patient_report.xhtml
+++ b/src/main/webapp/lab/patient_report.xhtml
@@ -225,8 +225,8 @@
                                                                 <h:panelGroup rendered="#{pvm.investigationItem.ixItemValueType eq 'Varchar'}">
                                                                     <p:selectOneMenu id="cmbMicStrVal" value="#{pvm.strValue}" editable="true"  style="min-width: 300px!important;" disabled="#{patientReportController.currentPatientReport.approved}">
                                                                         <f:selectItem itemLabel="SENSITIVE" itemValue="SENSITIVE" ></f:selectItem>
-                                                                        <f:selectItem itemLabel="Resistant" itemValue="Resistant" ></f:selectItem>
-                                                                        <f:selectItem itemLabel="Intermediate" itemValue="Intermediate" ></f:selectItem>
+                                                                        <f:selectItem itemLabel="RESISTANT" itemValue="Resistant" ></f:selectItem>
+                                                                        <f:selectItem itemLabel="INTERMEDIATE" itemValue="Intermediate" ></f:selectItem>
                                                                         <f:ajax event="change"  execute="@this" 
                                                                                 listener="#{patientReportController.savePatientReportItemValues()}" ></f:ajax>
                                                                     </p:selectOneMenu>
@@ -340,8 +340,8 @@
                                              rendered="#{patientReportController.currentPatientReport.approved or userPreferenceController.userPreference.canPrintWithoutPermission }" >
                                 <p:printer target="divPrint" ></p:printer>
                             </p:commandButton>
-                            <p:commandButton styleClass="nonPrintBlock"  ajax="false" value="PDF" actionListener="#{patientReportController.pdfPatientReport()}" 
-                                             rendered="#{patientReportController.currentPatientReport.approved or userPreferenceController.userPreference.canPrintWithoutPermission }" />
+                            <p:commandButton  styleClass="nonPrintBlock"  ajax="false" value="PDF" actionListener="#{patientReportController.pdfPatientReport()}" 
+                                             rendered="#{(patientReportController.currentPatientReport.approved or userPreferenceController.userPreference.canPrintWithoutPermission) and false}" />
                         </div>
 
 
@@ -399,145 +399,69 @@
                                 <div id="divReportM"   class="labReport" >
                                     <ez:common_report commonReportFormat="#{patientReportController.currentPatientReport.transInvestigation.reportFormat}"
                                                       patientReport="#{patientReportController.currentPatientReport}"/>
-
-
-
-                                    <table id="micro" style="position: absolute;table-layout: fixed; top: 30%; left:5%; font-size: 12px!important; width: 90%!important; " >
-                                        <tr>
-                                            <td style="text-align: center;">
-                                                <h:outputLabel value="#{patientReportController.currentPatientReport.patientInvestigation.investigation.printName}" 
-                                                               style="font-weight: bold;font-size: 20px!important; "/>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <p:spacer height="50px" ></p:spacer>
-                                            </td>
-                                        </tr>
-                                        <tr><td><h:outputLabel/></td></tr>
-                                        <tr><td><h:outputLabel/></td></tr>
-                                        <tr><td><h:outputLabel/></td></tr>
-                                        <tr>
-
-                                            <td id="micromemos">
-                                                <table>
-                                                    <ui:repeat  value="#{patientReportController.currentPatientReport.patientReportItemValues}" var="prv" >
-                                                        <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.riTop lt 50 }" >
-                                                            <tr style="vertical-align: top;">
-                                                                <td style="min-width: 250px;padding-left: 1px; padding-right: 1px; padding-top: 10px;">
-                                                                    <h:outputLabel value="#{prv.investigationItem.name}"   escape="false"  />
-                                                                </td>
-                                                                <td style="min-width: 1150px;padding-left: 1px; padding-right: 1px;">
-                                                                    <h:outputLabel value="#{fn:replace(prv.lobValue,'\\n','&lt;br/&gt;')}"    escape="false"   />
-                                                                </td>
-                                                            </tr>
-                                                        </h:panelGroup>
-                                                    </ui:repeat>
-                                                    <ui:repeat  value="#{patientReportController.currentPatientReport.patientReportItemValues}" var="prv" >
-                                                        <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'DynamicLabel' and prv.investigationItem.retired eq false and prv.investigationItem.riTop  lt 50 }" >
-                                                            <tr >
-                                                                <td >
-                                                                    <h:outputLabel value="#{prv.investigationItem.name}"  escape="false"  />
-                                                                </td>
-                                                                <td>
-
-                                                                </td>
-                                                            </tr>
-                                                        </h:panelGroup>
-                                                    </ui:repeat>
-                                                </table>
-                                            </td>
-                                        </tr>
-
-                                        <tr>
-                                            <td id="micLabelsBeforeAbst">
-
-                                                <ui:repeat value="#{patientReportController.currentPatientReport.item.reportItems}" var="myMicIi" >
-                                                    <div style="#{myMicIi.cssStyle}; left: #{prvl.cssLeft};">
-                                                        <h:outputText rendered="#{myMicIi.retired ne true and myMicIi.ixItemType eq 'List' }" 
-                                                                      value="#{myMicIi.name}" style="color: #{myMicIi.cssColor}" escape="false" ></h:outputText>
+                                    <div style="display: inline-block; position: absolute; top: 28%; width: 97%; left: 1%; text-align: center; font-family:Cambria, Georgia, serif; font-size: 16px; height: 70%;" >
+                                        <div id="ixName" >
+                                            <h:outputLabel value="#{patientReportController.currentPatientReport.patientInvestigation.investigation.printName}" 
+                                                           style="font-weight: bold;font-size: 18px!important; "/>
+                                        </div>
+                                        <div id="labelsAndValues" style="left:5%; width: 90%; display: inline-block;" >
+                                            <ui:repeat  value="#{patientReportController.currentPatientReport.patientReportItemValues}" var="prv" >
+                                                <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.riTop lt 50 }" >
+                                                    <div style="vertical-align: top; text-align: left;  padding-top: 2%; padding-bottom: 2%;">
+                                                        <div style="float: left;width: 5%; " ></div>
+                                                        <div style=" float: left; text-align: left; width: 20%;padding-left: 1px; padding-right: 1px; padding-top: 5px; vertical-align: top;">
+                                                            <h:outputLabel value="#{prv.investigationItem.name}"   escape="false"/>
+                                                        </div>
+                                                        <div style="float: left; width: 5%; " ></div>
+                                                        <div style=" text-align: left; float:left;width: 60%;padding-left: 1px; padding-right: 1px; padding-top: 5px; vertical-align: top;">
+                                                            <h:outputLabel value="#{fn:replace(prv.lobValue,'\\n','&lt;br/&gt;')}"   escape="false"   />
+                                                        </div>
                                                     </div>
-                                                </ui:repeat>
+                                                </h:panelGroup>
+                                            </ui:repeat>
+                                            <div style="vertical-align: top; text-align: left;  padding-top: 2%; padding-bottom: 2%; clear: left;">
+                                                <h:outputLabel value="Antibiotic Sensitivity Test" 
+                                                               rendered="#{patientReportController.currentPatientReport.transHasAbst}"
+                                                               style="font-size: 120%; font-weight: bold; padding-left: 18px;"></h:outputLabel>
+                                            </div>
+                                            <ui:repeat  value="#{patientReportController.currentPatientReport.patientReportItemValues}" 
+                                                        var="prv" >
+                                                <h:panelGroup 
+                                                    rendered="#{prv.investigationItem.ixItemType eq 'Antibiotic' and prv.investigationItem.retired eq false and prv.strValue ne '' and prv.strValue ne null  }" >
+                                                    <div style="float: left;width: 5%; " ></div>
+                                                    <div style=" float: left; text-align: left; width: 20%;padding-left: 1px; padding-right: 1px; padding-top: 5px; vertical-align: top;">
+                                                        <h:outputLabel value="#{prv.investigationItem.name}"  escape="false" />
+                                                    </div>
+                                                    <div style="float: left;width: 5%;  " ></div>
+                                                    <div style=" text-align: left; float:left;width: 60%;padding-left: 1px; padding-right: 1px; padding-top: 5px; vertical-align: top;">
+                                                        <h:outputLabel value="#{prv.strValue}" escape="false"  />
+                                                    </div>
 
-
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <p:spacer height="10" ></p:spacer>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td id="ablist">
-                                                <table>
-                                                    <tr>
-                                                        <td colspan="2"  >
-                                                            <h:outputLabel value="Antibiotic Sensitivity Test" 
-                                                                           rendered="#{patientReportController.currentPatientReport.transHasAbst}"
-                                                                           style="font-size: 120%; font-weight: bold; padding-left: 20px;"></h:outputLabel>
-                                                        </td>
-                                                    </tr>
-                                                    <td>
-                                                        <p:spacer height="10" ></p:spacer>
-                                                    </td>
-                                                    <ui:repeat  value="#{patientReportController.currentPatientReport.patientReportItemValues}" 
-                                                                var="prv" >
-                                                        <h:panelGroup 
-                                                            rendered="#{prv.investigationItem.ixItemType eq 'Antibiotic' and prv.investigationItem.retired eq false and prv.strValue ne '' and prv.strValue ne null  }" >
-                                                            <tr>
-                                                                <td style="min-width: 250px;">
-                                                                    <h:outputLabel value="#{prv.investigationItem.name}"  escape="false" />
-                                                                </td>
-                                                                <td  style="min-width: 850px;">
-
-                                                                    <h:outputLabel value="#{prv.strValue}" escape="false"  />
-                                                                </td>
-                                                            </tr>
-                                                        </h:panelGroup>
-                                                    </ui:repeat>
-                                                </table>
-
-                                            </td>
-                                        </tr>
-                                        <br/><br/>
-                                        <tr>
-                                            <td id="miccomments">
-                                                <table>
-                                                    <ui:repeat  value="#{patientReportController.currentPatientReport.patientReportItemValues}" var="prv" >
-                                                        <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.riTop gt 50 }" >
-                                                            <tr>
-                                                                <td style="min-width: 250px;padding-left: 1px; padding-right: 1px; vertical-align: top;">
-                                                                    <h:outputLabel value="#{prv.investigationItem.name}"  escape="false" />
-                                                                </td>
-                                                                <td>
-                                                                    <h:outputLabel value="#{fn:replace(prv.lobValue,'\\n','&lt;br/&gt;')}"    escape="false" />
-                                                                </td>
-                                                            </tr>
-                                                        </h:panelGroup>
-                                                    </ui:repeat>
-                                                </table>
-                                            </td>
-                                        </tr>
-
-                                    </table>
-
-
-
+                                                </h:panelGroup>
+                                            </ui:repeat>
+                                            <ui:repeat  value="#{patientReportController.currentPatientReport.patientReportItemValues}" var="prv" >
+                                                <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.riTop gt 50 }" >
+                                                    <div style="float: left;width: 5%; " ></div>
+                                                    <div style=" float: left; text-align: left; width: 20%;padding-left: 1px; padding-right: 1px; padding-top: 5px; vertical-align: top;">
+                                                        <h:outputLabel value="#{prv.investigationItem.name}"  escape="false" />
+                                                    </div>
+                                                    <div style="float: left;width: 5%;  " ></div>
+                                                    <div style=" text-align: left; float:left;width: 60%;padding-left: 1px; padding-right: 1px; padding-top: 5px; vertical-align: top;">
+                                                        <h:outputLabel value="#{fn:replace(prv.lobValue,'\\n','&lt;br/&gt;')}"    escape="false" />
+                                                    </div>
+                                                </h:panelGroup>
+                                            </ui:repeat>
+                                        </div>
+                                        <div style="clear: left;">
+                                            <h:outputLabel value="--- End of Report ---" style="font-size: 14px; font-weight: bold; "></h:outputLabel>
+                                        </div>
+                                    </div>
                                 </div>
                             </h:panelGroup>
 
                         </h:panelGroup>
 
-                        <h:panelGroup  id="divPrint1" >
-
-                            <div class="labBillPrintPanel" style="color: black; width: 21cm;height: 28cm;margin: auto; margin-top: 1cm;margin-bottom: 1cm;" >
-
-
-
-
-                            </div>
-
-                        </h:panelGroup>
+                        
 
 
                     </h:form>
